squash! Bug 16940: After update, load local change notes.
Also fix bug 29440. Now about:tbupdate is styled as a fairly simple
changelog page that is designed to be displayed via a link that is on
about:tor.

--- a/browser/base/content/abouttbupdate/aboutTBUpdate.css
+++ b/browser/base/content/abouttbupdate/aboutTBUpdate.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, The Tor Project, Inc.
+ * Copyright (c) 2019, The Tor Project, Inc.
  * See LICENSE for licensing information.
  *
  * vim: set sw=2 sts=2 ts=8 et syntax=css:
@@ -12,56 +12,63 @@
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 110%;
   color: var(--abouttor-text-color);
   background-color: var(--abouttor-bg-toron-color);
   background-attachment: fixed;
   background-size: 100% 100%;
 }
 
-#torbrowser-version {
-  /* These CSS rules match the about:tor page */
-  position: fixed;
-  top: 6px;
-  right: 6px;
-  height: 30px;
-  width: 200px;
-  font-size: 15px;
-  white-space: pre-wrap;
-  text-align: right;
-}
-
 a {
   color: var(--abouttor-text-color);
 }
 
-#logo {
-  background-image: url("chrome://branding/content/icon128.png");
-  height: 128px;
-  width: 128px;
-  margin: 20px;
-  float: left;
+.two-column-grid {
+  display: inline-grid;
+  grid-template-columns: auto auto;
+  grid-column-gap: 50px;
+  margin: 10px 0px 0px 50px;
 }
 
-#msg {
-  margin-top: 50px;
-  float: left;
+.two-column-grid div {
+  margin-top: 40px;
+  align-self: baseline;  /* Align baseline of text across the row. */
 }
 
-#msg-updated {
-  font-size: 120%;
-  margin-bottom: 20px;
+.label-column {
+  font-size: 14px;
+  font-weight: 400;
 }
 
-#changelog-container {
-  margin: 0px 20px 20px 20px;
+/*
+ * Use a reduced top margin to bring the row that contains the
+ * "visit our website" link closer to the row that precedes it. This
+ * looks better because the "visit our website" row does not have a
+ * label in the left column.
+ */
+div.more-info-row {
+  margin-top: 5px;
+  font-size: 14px;
 }
 
-#changelog-heading {
-  margin-bottom: 4px;
+#version-content {
+  font-size: 50px;
+  font-weight: 300;
 }
 
-#changelog {
-  margin-left: 20px;
+body:not([havereleasedate]) .release-date-cell {
+  display: none;
+}
+
+#releasedate-content {
+  font-size: 17px;
+}
+
+#releasenotes-label {
+  align-self: start;  /* Anchor "Release Notes" label at the top. */
+}
+
+#releasenotes-content {
+  font-family: monospace;
+  font-size: 15px;
   white-space: pre;
 }
